# AitSar

./: Cargo.toml  LICENSE  README.md
.github/workflows/: notes.yaml
src/: lib.rs
src/search/: exponential.rs  fibonacci.rs  interpolation.rs  mod.rs  ternary.rs
src/table/: hash.rs  mod.rs
