[package]
name = "AitSar"
version = "0.1.1"
authors = ["Aitzaz Imtiaz <aitzazimtiaz855@gmail.com>"]
repository = "https://github.com/AitSad/AitSar"
edition = "2018"
description = "A Rust implementations of algorithms faster then Binary Search"
readme = "README.md"
license = "MIT"

[dependencies]


[dev-dependencies]
winit = "0.22"

[build-dependencies]
shaderc = "0.6.2"

[workspace]
